--- a/admin.html
+++ b/admin.html
@@ -1061,7 +1061,7 @@
                     loadAdminIssues();
                 } else {
                     // No user is signed in, redirect to login
-                    window.location.href = 'login.html';
+                    window.location.href = 'index.html';
                 }
             });
             
@@ -1088,7 +1088,7 @@
         // Logout function
         function logout() {
             auth.signOut().then(() => {
-                window.location.href = 'login.html';
+                window.location.href = 'index.html';
             }).catch((error) => {
                 console.error('Logout error:', error);
             });
