--- a/citizen.html
+++ b/citizen.html
@@ -1002,7 +1002,7 @@
                 loadCitizenIssues();
                 updateStats();
             } else {
-                window.location.href = 'login.html';
+                window.location.href = 'index.html';
             }
         });
 
@@ -1137,7 +1137,7 @@
         // Logout function
         function logout() {
             auth.signOut().then(() => {
-                window.location.href = 'login.html';
+                window.location.href = 'index.html';
             }).catch((error) => {
                 console.error("Logout error:", error);
                 showToast("Error signing out. Please try again.", false);
