--- a/municipal.html
+++ b/municipal.html
@@ -921,7 +921,7 @@
         // Logout function
         function logout() {
             auth.signOut().then(() => {
-                window.location.href = 'login.html';
+                window.location.href = 'index.html';
             }).catch((error) => {
                 console.error('Logout error:', error);
             });
